# CourseProject

./: README.md  aa.files  killme.files
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: CMakeCCompilerId.c.A8D27ED88F216D54.idx  CMakeCXXCompilerId.cpp.FFBE04508AFA0105.idx  Character.cpp.65D18A3A0F10FBE3.idx  Character.h.53BD2C582C6406B1.idx  CharactersWindows.cpp.A433E259E1CF4024.idx  CharactersWindows.h.0567EE7C6125A432.idx  Client.cpp.BB97D8141CDCEE82.idx  Client.h.1C43980EE9749681.idx  EnterCountScreen.cpp.A3999474B766057F.idx  EnterCountScreen.h.05E633DB3C2152AF.idx  FILE.h.0B47AA35880D6C68.idx  GameScreen.cpp.092A35DD96B4803E.idx  GameScreen.h.8AC4283C4E5D89B3.idx  Host.cpp.6FFCFED3A602BABE.idx  Host.h.5F9B0229E46AF118.idx  MainWindow.cpp.BD616231646337F4.idx  MainWindow.h.CB5EAA39E1103F1C.idx  Randomisation.cpp.30583AC163E3733F.idx  Randomisation.h.FC66B8D6B17ADBF6.idx  WaitScreen.cpp.E3AD2F41ED81725F.idx  WaitScreen.h.DD5F52092E8B3220.idx  __FILE.h.6F8BF1EA128A85A8.idx  __locale_t.h.3F73A78C1398A1A9.idx  __mbstate_t.h.18CD360ACD7D77DA.idx  __sigset_t.h.6BFEE909145251C5.idx  (+155 more)
Course project/: CMakeLists.txt  main.cpp
Course project/Client/: Client.cpp  Client.h
Course project/EnterCountScreen/: EnterCountScreen.cpp  EnterCountScreen.h
Course project/EnterCountcreen/: EnterCountScreen.cpp  EnterCountScreen.h
Course project/GameScreen/: GameScreen.cpp  GameScreen.h
Course project/GameScreen/CharactersWindows/: CharactersWindows.cpp  CharactersWindows.h
Course project/Host/: Host.cpp  Host.h
Course project/MainWindow/: MainWindow.cpp  MainWindow.h
Course project/Middleware/: Randomisation.cpp  Randomisation.h
Course project/Models/: Character.cpp  Character.h
Course project/Sources/: additional_info.txt  character_sex.txt  fears.txt  health_states.txt  packages.txt  personal_traits.txt
Course project/StartupScreen/: MainWindow.cpp  MainWindow.h
Course project/Styles/: styles.qss
Course project/WaitScreen/: WaitScreen.cpp  WaitScreen.h
